--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -22,6 +22,7 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Debug\MarcelJoachimKloubert.CLRToolbox.XML</DocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <NoWarn>618</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -58,6 +59,26 @@
     <Compile Include="ComponentModel\NotificationObjectBase.PropertyChanging.cs">
       <DependentUpon>NotificationObjectBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="Diagnostics\ILoggerFacade.cs" />
+    <Compile Include="Diagnostics\ILogMessage.cs" />
+    <Compile Include="Diagnostics\Impl\AggregateLogger.cs" />
+    <Compile Include="Diagnostics\Impl\AsyncLogger.cs" />
+    <Compile Include="Diagnostics\Impl\AsyncLogger.ctor.cs">
+      <DependentUpon>AsyncLogger.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Diagnostics\Impl\AsyncLogger.OnLog.cs">
+      <DependentUpon>AsyncLogger.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Diagnostics\Impl\DelegateLogger.cs" />
+    <Compile Include="Diagnostics\LoggerCategories.cs" />
+    <Compile Include="Diagnostics\LoggerFacadeBase.cs" />
+    <Compile Include="Diagnostics\LoggerFacadeBase.LogInner.cs">
+      <DependentUpon>LoggerFacadeBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Diagnostics\LoggerFacadeBase.LogMessage.cs">
+      <DependentUpon>LoggerFacadeBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Diagnostics\LoggerFacadeWrapperBase.cs" />
     <Compile Include="Helpers\CollectionHelper.AddRange.cs">
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
@@ -75,6 +96,7 @@
       <DependentUpon>StringHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\StringHelper.cs" />
+    <Compile Include="IIdentifiable.cs" />
     <Compile Include="ITMObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TMConsole.cs" />
