log command and improvements
- ADD: Arguments to log command execution context interface
- CHG: code improvements

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -59,6 +59,7 @@
     <Compile Include="ComponentModel\NotificationObjectBase.PropertyChanging.cs">
       <DependentUpon>NotificationObjectBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="Diagnostics\Execution\Impl\DelegateLogCommand.cs" />
     <Compile Include="Diagnostics\Execution\ILogCommand.cs" />
     <Compile Include="Diagnostics\Execution\ILogCommandExecutionContext.cs" />
     <Compile Include="Diagnostics\Execution\ILogCommandExecutionResult.cs" />
