disposable and scripting framework
- ADD: IDisposable extended types
- ADD: Scriting framework with first project using RemObjects Script for
.NET

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 
 /MarcelJoachimKloubert.CLRToolbox.Portable1/obj
 /MarcelJoachimKloubert.CLRToolbox.Portable1/bin
+/Projects/MarcelJoachimKloubert.ScriptEngine/*.suo
+/Projects/MarcelJoachimKloubert.ScriptEngine/MarcelJoachimKloubert.ScriptEngine/obj
+/Projects/MarcelJoachimKloubert.ScriptEngine/MarcelJoachimKloubert.ScriptEngine/bin
