scripting framework and fixes
- ADD: first script functions for ECMA script executor: include(),
include_files and load_modules()
- ADD: script module test project
- FIX: removed var keywords from .NET 2.0 toolbox project

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@
 /Projects/MarcelJoachimKloubert.ScriptEngine/*.suo
 /Projects/MarcelJoachimKloubert.ScriptEngine/MarcelJoachimKloubert.ScriptEngine/obj
 /Projects/MarcelJoachimKloubert.ScriptEngine/MarcelJoachimKloubert.ScriptEngine/bin
+/Projects/MarcelJoachimKloubert.ScriptEngine/MarcelJoachimKloubert.ScriptEngine.TestExport/obj
+/Projects/MarcelJoachimKloubert.ScriptEngine/MarcelJoachimKloubert.ScriptEngine.TestExport/bin
